<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single"
           android:enabled="false"
           android:visible="false">
        <item
            android:id="@+id/user_data_ac_mn"
            android:title="@string/user_data_ac_mn"
            android:icon="@drawable/ic_home_black_24dp"/>
        <item
            android:id="@+id/see_usercomu_by_user_ac_mn"
            android:title="@string/see_usercomu_by_user_ac_mn"
            android:icon="@drawable/ic_home_black_24dp"/>
        <item
            android:id="@+id/incid_see_open_by_comu_ac_mn"
            android:title="@string/incid_see_by_comu_ac_mn"
            android:icon="@drawable/ic_home_black_24dp"/>
    </group>
    <!--TODO: poner nombre de la activity que gestiona la acción del menú.-->
    <item
        android:id="@+id/confidencialidad_ac_mn"
        android:title="@string/confidencialiad_mn"
        android:icon="@drawable/ic_home_black_24dp"
        android:enabled="true"
        android:checkable="true"
        android:visible="true"/>
</menu>