<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            style="@style/baseLayout.scroll"
            tools:context="com.didekindroid.usuario.activity.UserDataAc">

    <RelativeLayout android:id="@+id/user_data_ac_layout"
                    style="@style/baseLayout">
        <TextView
                android:id="@+id/user_data_ac_rotulo"
                style="@style/textBase.textPageLabel1"
                android:text="@string/user_data_ac_label"
                android:layout_alignParentStart="true"/>

        <TextView
                android:id="@+id/user_data_ac_cambios_rot"
                style="@style/textBase.textFieldLabel2"
                android:text="@string/user_data_ac_cambios_text"
                android:layout_alignParentStart="true"
                android:layout_below="@id/user_data_ac_rotulo"/>

        <include
                layout="@layout/user_data_include"
                android:id="@+id/user_data_ac_include"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_below="@+id/user_data_ac_cambios_rot"/>

        <TextView
                android:id="@+id/user_data_ac_password_rot"
                style="@style/textBase.textFieldLabel2"
                android:text="@string/user_data_ac_password_txt"
                android:layout_alignParentStart="true"
                android:layout_below="@id/user_data_ac_include"/>

        <EditText
                android:id="@+id/user_data_ac_password_ediT"
                style="@style/textBase.editField.password"
                android:hint="@string/user_data_ac_password_hint"
                android:layout_alignParentStart="true"
                android:layout_below="@id/user_data_ac_password_rot"/>

        <Button
                android:id="@+id/user_data_modif_button"
                style="@style/textBase.acButton1"
                android:text="@string/user_data_modif_button_txt"
                android:layout_below="@id/user_data_ac_password_ediT"/>

    </RelativeLayout>
</ScrollView>